--- a/event_surveys_project/core/templates/base.html
+++ b/event_surveys_project/core/templates/base.html
@@ -27,6 +27,9 @@
               <a href="{% url 'account_profile' %}">Profile</a>
             </li> {% endcomment %}
             <li>
+              <a href="{% url 'user_surveys_list' %}">My Surveys</a>
+            </li>
+            <li>
               <a href="{% url 'account_logout' %}">Logout</a>
             </li>
           {% else %}
