Used jQuery and AJAX to carry out deletions. Also added question_delete view and url. Deletions now work smoothly and quickly.

--- a/event_surveys_project/core/templates/base.html
+++ b/event_surveys_project/core/templates/base.html
@@ -8,6 +8,7 @@
       {% endblock %}
     </title>
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/style.css' %}" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% block extra_head %}
     {% endblock extra_head %}
   </head>
