Small style changes to templates and removed old styles.

--- a/event_surveys_project/core/templates/base.html
+++ b/event_surveys_project/core/templates/base.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <!-- Site-wide navigation and branding -->
-      <nav class="navbar bg-primary">
+      <nav class="navbar bg-secondary">
         <div class="container-fluid">
           <ul class="nav">
             <li class="nav-item">
