--- a/event_surveys_project/core/templates/base.html
+++ b/event_surveys_project/core/templates/base.html
@@ -12,6 +12,10 @@
       type="text/css"
       href="{% static 'core/css/style.css' %}"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     {% block extra_head %} {% endblock extra_head %}
   </head>
   <body>
