--- a/event_surveys_project/surveys/templates/surveys/user_surveys_list.html
+++ b/event_surveys_project/surveys/templates/surveys/user_surveys_list.html
@@ -4,7 +4,7 @@
     <h2 class="mb-4">My Surveys</h2>
     <div class="m-2">
       {% for survey in user_surveys %}
-      <div class="card mb-3">
+      <div class="card mb-3" id="survey-card">
         <div class="card-body">
           <h4 class="card-title">{{survey.title}}</h4>
           <p class="card-text">Created on: {{survey.date_created}}</p>
@@ -37,5 +37,34 @@
   </div>
 </div>
 {% endblock content %} {% block custom_js %}
-<script></script>
+<script>
+    $(document).ready(function () {
+    $("#btn-del").on("click", function () {
+      const button = $(this);
+      const survey_id = $(this).data("survey-id");
+      console.log(survey_id);
+      const url = `{% url 'survey_delete' 0 %}`.replace(
+        "/0/",
+        `/${survey_id}/`
+      );
+      console.log(url);
+      $.ajax({
+        type: "POST",
+        url: url,
+        headers: {
+          "X-CSRFToken": "{{ csrf_token }}"
+        },
+        success: function (response) {
+          if (response.success) {
+            button.closest("#survey-card").css("display", "none");
+            console.log("you deleted it");
+          } else {
+            alert("Failed to delete question: " + response.error);
+          }
+        }
+      });
+    });
+  });
+</script>
+</script>
 {% endblock custom_js %}
