--- a/event_surveys_project/surveys/templates/surveys/create_survey.html
+++ b/event_surveys_project/surveys/templates/surveys/create_survey.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% load crispy_forms_tags %} {% block content %}
 <h2>Create Survey</h2>
 <form method="post">
   {% csrf_token %}
   <table>
-    {{form}}
+    {{form|crispy}}
   </table>
   <button class="btn btn-primary" type="submit">Create Survey</button>
 </form>
