--- a/event_surveys_project/core/templates/base.html
+++ b/event_surveys_project/core/templates/base.html
@@ -60,6 +60,7 @@
     </footer>
     <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'jquery-ui/dist/jquery-ui.min.js' %}"></script>
     <script>
       if (typeof jQuery !== "undefined") {
         console.log("jQuery is loaded");
