--- a/event_surveys_project/surveys/templates/surveys/survey_view.html
+++ b/event_surveys_project/surveys/templates/surveys/survey_view.html
@@ -1,3 +1,8 @@
-{% extends 'base.html' %} {% block content %}
-<h1>View Survey {{survey.id}}</h1>
-{% endblock content %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
+<h1>{{ survey.title }}</h1>
+<p>{{ survey.description }}</p>
+<form method="post">
+  {% csrf_token %} {{ form | crispy}}
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+{% endblock %}
